# lintc

./: .gitignore  LICENSE  README.md  lintc.py  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: changelog.md  index.md
lintc_plugins/: lintc_swiper.py  remote_sync.py  tag_sync.py  terminal_mock.py
lintc_plugins/swiper_assets/: component.html  lintc-swiper.css  lintc-swiper.js
tests/: run_tests.py  test_body_sections.py  test_body_source.py  test_build.py  test_build_plugins.py  test_check.py  test_config.py  test_errors.py  test_markdown.py  test_plugin_discovery.py  test_server.py  test_template.py  test_yaml.py  update_goldens.py
tests/fixtures/minimal/expected/: 404.html  index.html  sitemap.xml
tests/fixtures/minimal/expected/blog/: index.html
tests/fixtures/minimal/expected/blog/a-post/: index.html
tests/fixtures/minimal/expected/products/: index.html
tests/fixtures/minimal/expected/products/a-product/: index.html
tests/fixtures/minimal/input/content/blog/: _index.yaml  a-post.md
tests/fixtures/minimal/input/content/pages/: 404.yaml  home.yaml
tests/fixtures/minimal/input/content/products/: _index.yaml  a-product.yaml
tests/fixtures/minimal/input/data/: nav.yaml  site.yaml
tests/fixtures/minimal/input/layouts/: 404.html  _base.html  blog-index.html  blog-post.html  home.html  product.html  products-index.html
tests/fixtures/minimal/input/layouts/partials/: site-footer.html  site-header.html
tests/plugins/: test_lintc_swiper.py  test_remote_sync.py  test_tag_sync.py  test_terminal_mock.py
(+3 files in other folders)
